# junai

./: .gitignore  CHANGELOG.md  LICENSE  README.md  USERGUIDE.md  agent-log.jsonl  export_runtime_resources.py  pyproject.toml  server.json  sync-pool.ps1  sync.ps1  validate_agents.py  validate_pool.py
.claude/: usage-log.jsonl
.claude-plugin/: marketplace.json
.claudster/: usage-log.jsonl
.github/: copilot-instructions.md  pipeline-state.template.json  project-config.md  runtime-targets.json
.github/agent-docs/: AGENT_WORKFLOW_CHEATSHEET.md  CONTRACT-REFERENCE.md  GITIGNORE-POLLUTION-INVESTIGATION.md  GLOSSARY.md  PROJECT-ONBOARDING-RUNBOOK.md  README.md  WORKFLOW-WALLCHART.md  agent-eval.md  agent-reference-card.md  pipeline-reliability-program.md  skills-reference-card.md
.github/agents/: accessibility.agent.md  anchor.agent.md  architect.agent.md  code-reviewer.agent.md  data-engineer.agent.md  debug.agent.md  deploy-local.agent.md  devops.agent.md  frontend-developer.agent.md  implement.agent.md  janitor.agent.md  knowledge-transfer.agent.md  mentor.agent.md  mermaid-diagram-specialist.agent.md  orchestrator.agent.md  plan.agent.md  planner.agent.md  prd.agent.md  preflight.agent.md  project-manager.agent.md  prompt-engineer.agent.md  security-analyst.agent.md  sql-expert.agent.md  streamlit-developer.agent.md  svg-diagram.agent.md  tester.agent.md  ui-ux-designer.agent.md  ux-designer.agent.md
.github/diagrams/: AGENT_WORKFLOW_CHEATSHEET.md  agent-reference-card.md  agent-workflow-design-reference.md  recipe-system-architecture.drawio  skills-reference-card.md
.github/handoffs/: 2026-02-26-junai-ecosystem-publish-automation.md  README.md
.github/hooks/: pre-commit-quality-gate.ps1  pre-commit-quality-gate.sh  pre-push-quality-gate.ps1  pre-push-quality-gate.sh
.github/instructions/: README.md  advisory-mode.instructions.md  browser-first.instructions.md  code-review.instructions.md  data-contracts.instructions.md  document-frontmatter.instructions.md  fastapi.instructions.md  frontend.instructions.md  gpu.instructions.md  junai-system.instructions.md  large-task-fidelity.instructions.md  performance-optimization.instructions.md  plan-mode.instructions.md  playwright.instructions.md  plotly-charts.instructions.md  portability.instructions.md  python.instructions.md  shell.instructions.md  terse-responses.instructions.md  testing.instructions.md  validation-discipline.instructions.md
.github/plans/: README.md  checkpoint.md  fann-junai-evolution-roadmap.md  fann-phase1-core-foundation.md  fann-phase2-coordinator-mode.md  fann-phase3-dream-memory.md  (+1 more)
plugin/: LOCAL-MODELS.md  README.md  litellm.config.example.yaml  model-aliases.json  settings.template.json  stack-map.json  statusline-command.sh
(+540 files in other folders)
