[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "junai-mcp"
version = "0.1.1"
description = "Agentic pipeline orchestration MCP server — manage pipeline state, modes, and supervision gates for AI-driven software development workflows."
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
keywords = ["mcp", "ai", "pipeline", "orchestration", "agents", "copilot"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "fastmcp>=0.3.0",
]

[project.urls]
Homepage = "https://github.com/saajunaid/junai"
Repository = "https://github.com/saajunaid/junai"
Issues = "https://github.com/saajunaid/junai/issues"

[project.scripts]
junai-mcp = "junai_mcp.server:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"junai_mcp" = ["py.typed"]
